--- a/app/views/shared/_user_card.html.erb
+++ b/app/views/shared/_user_card.html.erb
@@ -1,5 +1,5 @@
 <div class="row g-0">
-  <% @users.each do |user| %>
+  <% users.each do |user| %>
     <div class="col-12 col-sm-6 col-md-4 col-lg-4">
     <div class="card-user-container my-4">
       <br>
