--- a/app/assets/stylesheets/components/_user_card.scss
+++ b/app/assets/stylesheets/components/_user_card.scss
@@ -5,6 +5,7 @@
   box-shadow: 0 0 10px rgba(154, 154, 154, 0.2);
   border-radius: 10px;
   margin: 10px;
+  margin-top: 100px;
   height: 350px;
   color: black;
   display: flex;
@@ -31,6 +32,7 @@
   justify-content: space-between;
   flex-grow: 1;
   padding: 16px;
+  margin-top: 70px;
 }
 
 .user-card-tags {
@@ -75,4 +77,8 @@
 .card-user a {
   color: inherit !important;
   text-decoration: none !important;
+}
+
+.clickable-card {
+  text-decoration: none;
 }
