--- a/app/views/interviewers/become_interviewer.html.erb
+++ b/app/views/interviewers/become_interviewer.html.erb
@@ -9,6 +9,8 @@
           <%= f.input :about %>
           <%= f.input :linkedin, label: "LinkedIn profile URL"%>
           <%= f.input :github, label: "Github profile URL"%>
+          <%= f.input :fiverr, label: "Fiverr profile URL"%>
+          <%= f.input :personal_website, label: "Personal website URL"%>
 
           <%= f.association :tags,
                           as: :check_boxes,
