--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,7 +48,7 @@
         </div>
         <div class="btn btn-primary" id="years-exp-panel">
           <h4><%= @user.years_experience %>+</h4>
-          <small><p>years experience</p></small>
+          <small><p><%= "year".pluralize(@user.years_experience) %> experience</p></small>
         </div>
       </div>
       <div class="bottom-buttons">
@@ -60,4 +60,34 @@
   <!-- <div class="container">
     <%= render 'shared/review_card' %>
   </div> -->
+  <div class="show-main-content row g-0">
+    <div class="main-content-left col-12 col-sm-8 col-md-8 col-lg-8">
+      <h3>About</h3>
+      <p><%= @user.about %></p>
+      <h3>Some of my projects</h3>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="..." alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+    <div class="main-content-right col-12 col-sm-4 col-md-4 col-lg-4">
+    </div>
+  </div>
 </div>
