--- a/app/assets/stylesheets/components/_user_card.scss
+++ b/app/assets/stylesheets/components/_user_card.scss
@@ -13,6 +13,15 @@
   overflow: visible;
 }
 
+.user-card-avatar {
+  display: flex;
+  justify-content: center;
+}
+
+.user-card-avatar-center {
+  margin-top: -55px;
+}
+
 .user-avatar-img {
   height: 110px;
   width: 110px;
@@ -30,7 +39,6 @@
   justify-content: space-between;
   flex-grow: 1;
   padding: 16px;
-  margin-top: 70px;
 }
 
 .user-card-tags {
