--- a/app/assets/stylesheets/components/review_card.scss
+++ b/app/assets/stylesheets/components/review_card.scss
@@ -62,8 +62,9 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 5px;
+  margin-bottom: 5px;
   width: 100px;
-  font-size: 38px;
+  font-size: 28px;
 }
 
 .rating i {
