--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -145,11 +145,31 @@
 }
 
 .main-content-left {
-  background-color: bisque;
-  height: 500px;
+  //background-color: bisque;
+  margin-bottom: 30px;
 }
 
 .main-content-right {
-  background-color: rgb(241, 196, 255);
-  height: 500px;
+  display: flex;
+  justify-content: end;
+}
+
+.carousel-caption-header {
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.85);
+  padding: 3px 5px;
+  border-radius: 2px;
+}
+
+.carousel-caption-text {
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.85);
+  padding: 3px 5px;
+  border-radius: 2px;
+}
+
+.some-of-my-projects {
+  border-top: solid 1px #e0e0e0;
+  padding-top: 15px;
+  margin-bottom: 10px;
 }
