--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -57,37 +57,49 @@
       </div>
     </div>
   </div>
-  <!-- <div class="container">
-    <%= render 'shared/review_card' %>
-  </div> -->
   <div class="show-main-content row g-0">
     <div class="main-content-left col-12 col-sm-8 col-md-8 col-lg-8">
       <h3>About</h3>
-      <p><%= @user.about %></p>
-      <h3>Some of my projects</h3>
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <p class="mb-3"><%= @user.about %></p>
+      <h3 class="my-3 some-of-my-projects">Some of my projects</h3>
+      <div id="carouselExampleAutoplaying" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="..." alt="First slide">
+            <%= image_tag("airpnp.png", class:"d-block w-100") %>
+            <div class="carousel-caption d-none d-md-block">
+              <div><h5 class="carousel-caption-header">AirPnP</h5></div>
+              <div><p class="carousel-caption-text">An app for hiring out your swimming pool</p></div>
+            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Second slide">
+            <%= image_tag("movielist.png", class:"d-block w-100") %>
+            <div class="carousel-caption d-none d-md-block">
+              <div><h5 class="carousel-caption-header">Movie listings</h5></div>
+              <div><p class="carousel-caption-text">Store all your movies in custom lists</p></div>
+            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Third slide">
+            <%= image_tag("stupidcoaching.png", class:"d-block w-100") %>
+            <div class="carousel-caption d-none d-md-block">
+              <div><h5 class="carousel-caption-header">Stupid Coaching</h5></div>
+              <div><p class="carousel-caption-text">Get some tough love and get motivated</p></div>
+            </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
     <div class="main-content-right col-12 col-sm-4 col-md-4 col-lg-4">
+      <div>
+        <%= render 'shared/review_card' %>
+      </div>
     </div>
   </div>
 </div>
