--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,8 @@
 @import "components/index";
 @import "pages/index";
 
+@import "flatpickr/dist/flatpickr.css";
+
 .footer-fix {
   display: flex;
   flex-direction: column;
