--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,13 +1,15 @@
-<div class="container-booking">
-  <div class="container py-5 d-flex justify-content-center">
-    <div class="form rounded p-3 shadow">
-      <h3>Request Booking:</h3>
-      <%= simple_form_for @booking, url: interview_booking_path(interviewer_id: @user.id) do |f| %>
-        <%= f.input :start_time %>
-        <%= f.input :end_time %>
-        <%= f.input :meeting_link %>
-        <%= f.submit class: 'btn-form' %>
-      <% end %>
+<div class="container-signup-form">
+  <div class="row justify-content-center">
+    <div class="col-md-6 col-sm-4 col-sm-offset-4">
+      <div class="signup-form">
+        <h2><strong>Request Booking:</strong></h2>
+        <%= simple_form_for @booking, url: interview_booking_path(interviewer_id: @user.id), data: { controller: 'flatpickr' } do |f| %>
+          <%= f.input :start_time, as: :string, input_html: { data: { flatpickr_target: "startTime" } } %>
+          <%= f.input :end_time, as: :string, input_html: { data: { flatpickr_target: "endTime" } } %>
+          <%= f.input :meeting_link %>
+          <%= f.submit class: 'btn-primary' %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
