--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,7 +36,7 @@
             <i class="fa-regular fa-user" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">My Profile</a>
-             <a class="dropdown-item" href="#">My Bookings</a>
+              <%= link_to "My bookings", my_bookings_path, class: "nav-link dropdown-item" %>
               <%= link_to "Edit Profile", edit_user_registration_path, class: "nav-link dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "nav-link" %>
             </div>
