--- a/app/assets/stylesheets/components/_card_home.scss
+++ b/app/assets/stylesheets/components/_card_home.scss
@@ -1,5 +1,5 @@
 .card-home {
-  background-color: rgb(234, 234, 234);
+  background-color: $background-colour;
   width: 250px;
   height: 250px;
   border-radius: 10px;
