--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #e0e0e0;
+  background-color: $primary-colour;
   box-shadow: 0 -2px 2px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
