--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #e0e0e0;
+  background-color: $primary-colour;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
@@ -87,7 +87,7 @@
   }
 
   .form-control {
-    background-color: #f5f5f5;
+    background-color: $background-colour;
   }
 
 }
