--- a/app/assets/stylesheets/components/_review_card.scss
+++ b/app/assets/stylesheets/components/_review_card.scss
@@ -1,10 +1,10 @@
 .review-card {
-  border: 1px solid #e0e0e0;
+  border: 1px solid $secondary-colour;
   border-radius: 5px;
   padding: 20px;
   margin: 10 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: $background-colour;
   width: 350px;
   transition: transform 0.2s;
   display: flex;
@@ -53,7 +53,7 @@
 }
 
 .review-date {
-  color: #888;
+  color: $secondary-colour;
   font-size: 12px;
 }
 
@@ -65,6 +65,11 @@
   margin-bottom: 5px;
   width: 100px;
   font-size: 28px;
+  color: $primary-colour;
+}
+
+.review-rating span {
+  color: $text-colour;
 }
 
 .rating i {
@@ -78,7 +83,7 @@
 
 .review-divide {
   width: 100%;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid $secondary-colour;
 }
 
 .review-content {
