--- a/app/assets/stylesheets/components/_user_card.scss
+++ b/app/assets/stylesheets/components/_user_card.scss
@@ -1,6 +1,6 @@
 .card-user {
   overflow: hidden;
-  background: white;
+  background: $background-colour;
   position: relative;
   box-shadow: 0 0 10px rgba(154, 154, 154, 0.2);
   border-radius: 10px;
@@ -66,7 +66,7 @@
 
 .individual-tag {
   padding: 6px 10px;
-  background-color: rgb(241, 241, 240);
+  background-color: $background-colour;
   border-radius: 50px;
   margin-top: 10px;
   margin-bottom: 10px;
