--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -1,6 +1,6 @@
 .navbar-extender {
   height: 80px;
-  background-color: #e0e0e0;
+  background-color: $primary-colour;
   position: relative;
   overflow: visible;
 }
@@ -59,7 +59,7 @@
 }
 
 .user-details-buttons {
-  border-bottom: solid 1px #e0e0e0;
+  border-bottom: solid 1px $secondary-colour;
   margin-bottom: 30px;
 }
 
@@ -82,7 +82,7 @@
 }
 
 #reviews-button {
-  background-color: #638bad;
+  background-color: $secondary-colour;
   border: 0px;
   padding: 20px 25px;
   box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
@@ -93,7 +93,7 @@
 
 #book-button {
   margin-left: 8px;
-  background-color: rgb(34, 192, 150);
+  background-color: $accent-colour;
   border: 0px;
   padding: 20px 30px;
   box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
@@ -106,19 +106,19 @@
   margin-left: 8px;
   border: 0px;
   padding: 4px 15px;
-  background-color: #e0e0e0;
+  background-color: $primary-colour;
   box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 }
 
 #years-exp-panel p {
-  color: #808080;
+  color: $text-colour;
   opacity: 0.7;
   font-size: 12px;
   margin: 0px;
 }
 
 #years-exp-panel h4 {
-  color: #808080;
+  color: $text-colour;
   font-size: 20px;
   margin: 0px;
 }
@@ -127,19 +127,19 @@
   margin-left: 8px;
   border: 0px;
   padding: 4px 15px;
-  background-color: #e0e0e0;
+  background-color: $primary-colour;
   box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 }
 
 #interviews-panel p {
-  color: #808080;
+  color: $text-colour;
   opacity: 0.7;
   font-size: 12px;
   margin: 0px;
 }
 
 #interviews-panel h4 {
-  color: #808080;
+  color: $text-colour;
   font-size: 20px;
   margin: 0px;
 }
@@ -169,7 +169,7 @@
 }
 
 .some-of-my-projects {
-  border-top: solid 1px #e0e0e0;
+  border-top: solid 1px $secondary-colour;
   padding-top: 15px;
   margin-bottom: 10px;
 }
