changed home page front end

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="container-home">
-  <div class="banner">
+  <div class="banner-home">
     <h1>First Stage<h1>
     <h3>Find Your....<h3>
     <div class="buttons-home">
