--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,23 +1,36 @@
 // Specific CSS for your home-page
-.container-home .banner {
+.container-home .banner-home {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden; // Ensure no content spills out of the banner container
+  height: 60vh;
 
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("banner.jpg");
+    background-size: cover; // Adjust the size of the background image
+    background-position: center; // Center the background image
+    opacity: 0.5; // Adjust the opacity as needed
+    z-index: -1; // Ensure the background stays behind the content
+  }
 
   h1 {
     font-size: 120px;
     font-weight: bolder;
     margin-bottom: -5px;
-
   }
 
   h3 {
     font-size: 50px;
     font-weight: bolder;
-
-
   }
 
   .buttons-home {
@@ -33,33 +46,31 @@
       }
     }
 
-    #btn-index {
-      background-color: black;
+    #btn-index,
+    #btn-become-interviewer {
+      background-color: $primary-colour;
+      border: 1px solid $secondary-colour;
       box-shadow: 5px 10px 10px rgb(98, 97, 97);
-      padding: 10px 50px 10px 50px;
+      padding: 10px 50px;
       margin: 20px;
       border-radius: 5px;
+      transition: background-color 0.2s ease, border 0.2s ease;
+
+      &:hover {
+        background-color: $accent-colour;
+        border: 1px solid $secondary-colour;
+      }
+    }
+    #btn-index h4 {
+      color: $background-colour;
     }
 
-    #btn-index:hover {
-      background-color: gray;
-      border: 2px solid black;
-      transition: 0.2s ease;
+    #btn-become-interviewer h4 {
+      color: $background-colour;
     }
 
     #btn-become-interviewer {
-      background-color: black;
-      box-shadow: 5px 10px 10px rgb(98, 97, 97);
-      padding: 10px 30px 10px 30px;
-      margin: 20px;
-      border-radius: 5px;
+      padding: 10px 30px;
     }
-
-    #btn-become-interviewer:hover {
-      background-color: gray;
-      border: 2px solid black;
-      transition: 0.2s ease;
-    }
-
   }
 }
