--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -62,7 +62,7 @@
       </div>
       <div class="bottom-buttons">
         <%= link_to "Reviews", "#", id: "reviews-button", class:"btn btn-primary"%>
-        <%= link_to "Book Interview", "#", id:"book-button", class:"btn btn-primary"%>
+        <%= link_to "Book Interview", new_interview_booking_path(@user), id:"book-button", class:"btn btn-primary"%>
       </div>
     </div>
   </div>
