--- a/app/views/shared/_user_card.html.erb
+++ b/app/views/shared/_user_card.html.erb
@@ -24,7 +24,7 @@
             </div>
             <div class="price-capacity">
               <div class="capacity-icon"><i class="fa-solid fa-location-dot"></i> <p class="card-user-capacity ms-2"> <%= user.address %></p></div>
-              <h2 class="card-user-pricing"><%= user.years_experience %> <%= "year".pluralize(user.years_experience) %> experience</h2>
+              <p class="card-user-pricing"><strong><%= user.years_experience %> <%= "year".pluralize(user.years_experience) %> experience</strong></p>
             </div>
           </div>
         </div>
