--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,4 +26,9 @@
 body {
   background-color: $background-colour !important;
   color: $text-colour !important;
+  font-family: $body-font !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $headers-font !important;
 }
