--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
       <br>
       <br>
       <div class="user-names-links mt-4">
-        <h3 class=""><%= @user.first_name %> <%= @user.last_name %></h3>
+        <h3 class=""><strong><%= @user.first_name %> <%= @user.last_name %></strong></h3>
         <div class="show-social-links mt-2">
           <ul class="social-media-list">
             <% if @user.github? %>
