--- a/app/assets/stylesheets/components/_user_card.scss
+++ b/app/assets/stylesheets/components/_user_card.scss
@@ -19,13 +19,15 @@
 }
 
 .user-card-avatar-center {
-  margin-top: -55px;
+  margin-top: -40px;
 }
 
 .user-avatar-img {
   height: 110px;
   width: 110px;
   border-radius: 50%;
+  border: solid 1px white;
+  box-shadow: 2px 2px 1px rgba(0,0,0,0.2);
 
 }
 
