--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,7 @@
 // External libraries
 @import "bootstrap";
 @import "font-awesome";
-@import "flatpickr/dist/flatpickr.css";
+//@import "flatpickr/dist/flatpickr.css";
 @import "simple_calendar";
 
 // Your CSS partials
