--- a/app/views/shared/_mybookings_card.html.erb
+++ b/app/views/shared/_mybookings_card.html.erb
@@ -3,9 +3,11 @@
     <p> Link: <%= booking.meeting_link %></p>
   </div>
   <% if booking.status == nil %>
-    <div class="accept-reject-buttons">
-      <small><%= button_to "Accept", update_booking_status_path(booking, status: 'accepted'), class: "booking-card-accept", method: :patch, data: {turbo: false} %></small>
-      <small><%= button_to "Reject", update_booking_status_path(booking, status: 'rejected'), class: "booking-card-reject", method: :patch, data: {turbo: false} %></small>
-    </div>
+
+      <div class="accept-reject-buttons">
+        <small><%= button_to "Accept", update_booking_status_path(booking, status: 'accepted'), class: "accept-button", method: :patch, data: {turbo: false} %></small>
+        <small><%= button_to "Reject", update_booking_status_path(booking, status: 'rejected'), class: "reject-button", method: :patch, data: {turbo: false} %></small>
+      </div>
+
   <% end %>
 <% end %>
