--- a/app/assets/stylesheets/pages/_mybookings.scss
+++ b/app/assets/stylesheets/pages/_mybookings.scss
@@ -32,4 +32,10 @@
 
 .booking-requests {
   padding: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  background:rgb(241, 241, 241);
+  border-radius: 10px;
 }
