--- a/app/assets/stylesheets/components/_user_card.scss
+++ b/app/assets/stylesheets/components/_user_card.scss
@@ -75,6 +75,14 @@
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 10px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.tag_icon {
+  height: 20px;
+  width: 20px;
 }
 
 .price-capacity {
