--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,6 +27,7 @@
                         required: true %>
             <%= f.input :username,
                         required: true %>
+            <%= f.input :photo, as: :file %>
           </div>
           <div class="form-actions">
           <%= f.button :submit, "Sign up", class: "btn-primary" %>
