--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -45,12 +45,12 @@
   justify-content: center;
   flex-basis: auto;
   list-style: none;
-  width: 100%;
+  width: 70%;
   margin: 0;
   padding: 0;
 
   .nav-item {
-    margin: 0 50px;
+    margin: 0 30px;
   }
 }
 
@@ -66,11 +66,11 @@
 
 .nav-menu-right {
   display: flex;
+  flex-shrink: 0;
   justify-content: space-between;
   align-items: center;
   flex-basis: auto;
   list-style: none;
-  width: 22%;
   margin: 0;
   padding: 0;
 
@@ -80,6 +80,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-right: 10px;
+  height: 40px;
 
   .fa-search {
     color: #333;
@@ -92,14 +94,14 @@
 
 }
 
-.navbar-avatar-2 {
+.navbar-avatar {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  text-decoration: none;
-  margin: 0;
-  padding: 0;
-  width: 140px;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: $background-colour;
 
   a {
     color: grey;
