--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,8 @@
   <div class="navbar-container">
     <div class="nav-menu-left">
       <a href="<%= root_path %>" class="navbar-brand">
-          <%= image_tag "first_stage_logo.png" %>
+          <div class="logo"><%= image_tag "Group 1-3.png", :style => "width: 160px;" %>
+        </div>
       </a>
     </div>
 
