added logo to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,16 @@
 <div class="container-home">
   <div class="banner-home">
-    <h1>First Stage<h1>
-    <h3>Find Your....<h3>
+    <div class="first-stage">
+      <h1 id="homepage-first">First</h1>
+      <h1 id="homepage-stage">Stage</h1>
+      <div></div>
+      <div id="logo-checkbox-outer">
+        <div id="logo-checkbox-inner">
+          <i class="fa-solid fa-check" id="logo-check"></i>
+        </div>
+      </div>
+    </div>
+    <h3 id="homepage-tagline">Smash your first interview for the last time<h3>
     <div class="buttons-home">
       <div id="btn-index" class="link-colour"><h4><%= link_to "Find an Interviewer", users_path %><h4></div>
       <div id="btn-become-interviewer" class="link-colour"><h4>
