--- a/app/assets/stylesheets/components/_review_card.scss
+++ b/app/assets/stylesheets/components/_review_card.scss
@@ -1,5 +1,5 @@
 .review-card {
-  border: 1px solid $secondary-colour;
+  border: 1px solid #dadedd;
   border-radius: 5px;
   padding: 20px;
   margin: 10 10px;
@@ -83,7 +83,7 @@
 
 .review-divide {
   width: 100%;
-  border-bottom: 1px solid $secondary-colour;
+  border-bottom: 1px solid #dadedd;
 }
 
 .review-content {
